@@ -95,6 +95,11 @@
             <property name="mintiles" value="0"/>
             <property name="maxtiles" value="1"/>
         </streettile>
+
+        <streettile name="rwg_tile_gateway_straight_zztong_08">
+            <property name="mintiles" value="0"/>
+            <property name="maxtiles" value="1"/>
+        </streettile>
 	</append>
 
     <!-- **************************************************************
