@@ -2,8 +2,8 @@
 <xml>
 	<Name value="ZZTong-Prefabs" />
 	<DisplayName value="ZZTong Prefabs" />
-	<Description value="Adds prefabs and some RWG assets made by ZZTong. (Release V2.0-ZZ027)" />
+	<Description value="Adds prefabs and some RWG assets made by ZZTong." />
 	<Author value="ZZTong" />
-	<Version value="2.0.027" />
+	<Version value="2.0.028" />
 	<Website value="https://www.nexusmods.com/7daystodie/mods/1434/" />
 </xml>
